--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -22,12 +22,17 @@
     </div>
     <div class="Comida">
         <div class="Intro"><b>¿Qué querés comer hoy?</b></div>
-        <div class="Buscador">
-            <form action="/buscar" method="get">
-                <input type="text" name="q" placeholder="Buscar...">
-                <button type="submit">Buscar</button>
-            </form>
-        </div>
+        <div class="container">
+            <div class="Café"></div>
+            <div class="Medialunas"></div>
+            <div class="Chipá"></div>
+            <div class="Hamburguesas"></div>
+            <div class="Milanesas"></div>
+            <div class="Italiana"></div>
+            <div class="Tapas"></div>
+            <div class="Asiática"></div>
+            <div class="Veggie"></div>
+          </div>
     </div>
 </body>
 </html>
