--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,22 +20,21 @@
     </div>
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
-        <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
-        <div id="para1">Encontrá los mejores lugares para comer en Buenos aires, la ciudad más linda del mundo :)</div>
+        <div id="para1">Encontrá los mejores lugares para comer en Buenos aires :)</div>
     </div>
     <div class="border-top"></div>
     <div class="fotos">
         <div class="foto">
-            <img id="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida">
-            <div class="arriba"><a id="formato" href="./Comida/comida.html"><p style="background-color: #6D3826; padding: 5%;">ELEGÍ POR COMIDA</p></a></div>
+            <img id="img" src="./imagenes/Comida.JPG" alt="Rutas gastronómicas">
+            <div class="arriba"><a id="formato" href="./Comida/comida.html"><p style="background-color: #6D3826; padding: 10px;">Rutas gastronómicas</p></a></div>
         </div>
         <div class="foto">
-            <img id="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio">
-            <div class="arriba"><a id="formato" href="./Barrio/barrio.html"><p style="background-color: #788143;; padding: 5%;">ELEGÍ POR BARRIO</p></a></div>
+            <img id="img" src="./imagenes/Barrio.JPG" alt="Restaurantes">
+            <div class="arriba"><a id="formato" href="./Barrio/barrio.html"><p style="background-color: #788143; padding: 10px;">Restaurantes </p></a></div>
         </div>
         <div class="foto">
-            <img id="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día">
-            <div class="arriba"><a id="formato" href="./Hora/hora.html"><p style="background-color: #B89663; padding: 5%;">ELEGÍ POR HORA DEL DÍA</p></a></div>
+            <img id="img" src="./imagenes/Hora.JPG" alt="Cafeterías">
+            <div class="arriba"><a id="formato" href="./Hora/hora.html"><p style="background-color: #B89663; padding: 10px;">Cafeterías </p></a></div>
     </div>
 </body>
 </html>
