--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="foto">
             <img id="img" src="./imagenes/Hora.JPG" alt="Cafeterías">
             <div class="arriba"><a id="formato" href="./Hora/hora.html"><p style="background-color: #B89663; padding: 10px;">Cafeterías </p></a></div>
+        <div>
     </div>
 </body>
 </html>
