--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -6,27 +6,40 @@
     <link rel="stylesheet" href="barrio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Búsqueda por barrio</title>
+    <title>Comer en BA</title>
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
-        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
-    </div>
+        <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+    </div> 
     <div class="titulo"><p>¿ Buscás algo rico y cerca de casa ?</p></div>
-    <div class="container">
-        <div class="foto"><a class="subrayado" href="./Palermo/palermo.html"><p class="texto-fotos">PALERMO</p></a></div>
-        <div class="foto1"><a class="subrayado" href="./Colegiales/colegiales.html"><p class="texto-fotos">COLEGIALES</p></a></div>
-        <div class="foto2"><a class="subrayado" href="./San Telmo/STelmo.html"><p class="texto-fotos">SAN TELMO</p></a></div>
-        <div class="foto3"><a class="subrayado" href="./Las Cañitas/cañitas.html"><p class="texto-fotos">LAS CAÑITAS</p></a></div>
-        <div class="foto4"><a class="subrayado" href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">NUÑEZ / BELGRANO</p></a></div>
+    <div class="fotos">
+        <div class="foto">
+            <img id="img" src="imagenes/Palermo.jpg" alt="Palermo">
+            <div class="arriba"><a id="formato" href="./Palermo/palermo.html"><p style="background-color: #6D3826; padding: 10px;">PALERMO</p></a></div>
+        </div>
+        <div class="foto">
+            <img id="img" src="imagenes/Colegiales.jpg" alt="Colegiales">
+            <div class="arriba"><a id="formato" href="./Colegiales/colegiales.html"><p style="background-color: #788143; padding: 10px;">COLEGIALES</p></a></div>
+        </div>
+        <div class="foto">
+            <img id="img" src="imagenes/San Telmo.jpg" alt="San Telmo">
+            <div class="arriba"><a id="formato" href="./San Telmo/STelmo.html"><p style="background-color: #B89663; padding: 10px;">SAN TELMO</p></a></div>
+        </div>
+        <div class="foto">
+            <img id="img" src="imagenes/Cañitas.jpg" alt="Cañitas">
+            <div class="arriba"><a id="formato" href="./Las Cañitas/cañitas.html"><p style="background-color:#6D3826; padding: 10px;">LAS CAÑITAS</p></a></div>
+        </div>
+        <div class="foto">
+            <img id="img" src="imagenes/Nuñez-Belgrano.jpg" alt="Nuñez/Belgrano">
+            <div class="arriba"><a id="formato" href="./Nuñez-Belgrano/nuñez-bel.html"><p style="background-color: #788143; padding: 10px;">NUÑEZ / BELGRANO</p></a></div>
+        </div>
     </div>
 </body>
 </html>
