--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -1,3 +1,4 @@
+<!-- Restaurantes -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
     </div> 
-    <div class="titulo"><p>¿ Buscás algo rico y cerca de casa ?</p></div>
+    <div class="titulo"><b>¿ Buscás algo rico y cerca de casa ?</b></div>
     <div class="fotos">
         <div class="foto">
             <img id="img" src="imagenes/Palermo.jpg" alt="Palermo">
