--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -1,3 +1,4 @@
+<!-- Rutas gastronómicas -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,33 +7,33 @@
     <link rel="stylesheet" href="comida.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Búsqueda por tipo de comida</title>
+    <title>Comer en BA</title>
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
-        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+        <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+    </div> 
+    <div class="Intro">
+        <div id="titulo"><b>Rutas gastronómicas</b></div>
+        <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
-    <div class="Comida">
-        <div class="Intro"><b>¿Qué querés comer hoy?</b></div>
-        <div class="container">
-            <div class="Café"></div>
-            <div class="Medialunas"></div>
-            <div class="Chipá"></div>
-            <div class="Hamburguesas"></div>
-            <div class="Milanesas"></div>
-            <div class="Italiana"></div>
-            <div class="Tapas"></div>
-            <div class="Asiática"></div>
-            <div class="Veggie"></div>
+    <div class="container text-center">
+        <div class="row gap-3 align-items-center">
+          <div class="col text-black bg-light rounded">
+            Ruta de las hamburguesas
           </div>
+          <div class="col text-black bg-light rounded">
+            Ruta de las medialunas
+          </div>
+          <div class="col text-black bg-light rounded">
+            Ruta de los alfajores
+          </div>
+        </div>
     </div>
-</body>
 </html>
