--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -23,16 +23,19 @@
         <div id="titulo"><b>Rutas gastronómicas</b></div>
         <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
-    <div class="container text-center">
-        <div class="row gap-3 align-items-center">
-          <div class="col text-black bg-light rounded">
-            Ruta de las hamburguesas
+    <div class="container">
+        <div class="row gap-3">
+          <div class="col text-black bg-light rounded fs-5 p-2 text-center">
+            <p>Ruta de las hamburguesas</p>
+            <a href="https://goo.gl/maps/j5JxqQLmq8unJqdV9">Visitá el mapa</a>
           </div>
-          <div class="col text-black bg-light rounded">
-            Ruta de las medialunas
+          <div class="col text-black bg-light rounded fs-5 p-2 text-center">
+            <p>Ruta de las medialunas</p>
+            <a  href="https://goo.gl/maps/CDLhhUHXTHAvjadHA">Visitá el mapa</a>
           </div>
-          <div class="col text-black bg-light rounded">
-            Ruta de los alfajores
+          <div class="col text-black bg-light rounded fs-5 p-2 text-center">
+            <p>Ruta de los alfajores</p>
+            <a href="https://goo.gl/maps/4iggeEnnenG46Xe99">Visitá el mapa</a>
           </div>
         </div>
     </div>
