--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -44,11 +44,11 @@
         </div>
     </div>
     <div class="buscador">
-        <div id="textoB"><b>¿Tenés algo en mente que querés comer? Buscalo acá y te tiramos recomendaciones!</b></div>
-        <div>
+        <div id="textoB"><b>¿Tenés algo en mente que querés comer?</b></div>
+        <div id="textoC">Buscalo acá y te tiramos recomendaciones!</div>
+        <div id="Form">
             <input type="text" id="inputComida" placeholder="Ingresa una comida">
             <button onclick="sugerirLugarComida()">Buscar</button>
-            <button onclick="BorrarBúsqueda()">Borrar búsqueda</button>
         </div>
         <div><p id="resultado" class="text-light"></p></div>
     </div>
