--- a/Barrio/Palermo/palermo.html
+++ b/Barrio/Palermo/palermo.html
@@ -6,19 +6,17 @@
     <link rel="stylesheet" href="palermo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palermo</title>
+    <title>Comer en BA</title>
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="/Barrio/imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/Barrio/barrio.html"><b id="link">Volver</b></a></div>
-        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+        <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
+        <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
     </div>
 </body>
 </html>
