--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -24,33 +24,33 @@
         <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
 
-    <div class="d-flex justify-content-around flex-wrap">
-      <div class="card" style="width: 17rem; height: 34rem; margin: 30px;">
-        <img src="./imagenes/Hamburguesa.JPG" class="card-img-top" style="width: auto; height: 350px;" alt="Hamburguesas">
+    <div class="d-flex justify-content-around-1 flex-wrap">
+      <div class="card" style="width: 15rem; height: 34rem; margin: 30px;">
+        <img src="./imagenes/Hamburguesa.JPG" class="card-img-top" style="width: auto; height: 320px;" alt="Hamburguesas">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Hamburguesa</h5>
           <p class="card-text">Para que sepas dónde ir cuando querés comer una buena hamburguesa.</p>
           <a href="https://goo.gl/maps/j5JxqQLmq8unJqdV9" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 17rem; height: 34rem; margin: 30px;">
-        <img src="./imagenes/Medialunas.png" class="card-img-top" style="width: auto; height: 350px;" alt="Medialunas">
+      <div class="card" style="width: 15rem; height: 34rem; margin: 30px;">
+        <img src="./imagenes/Medialunas.png" class="card-img-top" style="width: auto; height: 320px;" alt="Medialunas">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Medialuna</h5>
           <p class="card-text">Siempre es un buen momento para comerse una medialuna (o varias).</p>
           <a href="https://goo.gl/maps/CDLhhUHXTHAvjadHA" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 17rem;height: 34rem; margin: 30px;">
-        <img src="./imagenes/Alfajor.jpg" class="card-img-top" style="width: auto; height: 350px;" alt="Alfajores">
+      <div class="card" style="width: 15rem;height: 34rem; margin: 30px;">
+        <img src="./imagenes/Alfajor.jpg" class="card-img-top" style="width: auto; height: 320px;" alt="Alfajores">
         <div class="card-body">
           <h5 class="card-title">Ruta del Alfajor</h5>
           <p class="card-text">Dónde clavarte un rico alfajor cuando estas tentado de algo dulce.</p>
           <a href="https://goo.gl/maps/4iggeEnnenG46Xe99" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 17rem;height: 34rem; margin: 30px;">
-        <img src="./imagenes/Pizza.jpg" class="card-img-top" style="width: auto; height: 350px;" alt="Pizza">
+      <div class="card" style="width: 15rem;height: 34rem; margin: 30px;">
+        <img src="./imagenes/Pizza.jpg" class="card-img-top" style="width: auto; height: 320px;" alt="Pizza">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Pizza</h5>
           <p class="card-text">Encontrá dónde comer las pizzas más ricas y con variedad de sabores.</p>
