--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -24,7 +24,7 @@
         <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
 
-    <div class="d-flex justify-content-around flex-wrap-direction-column">
+    <div class="d-flex justify-content-around align-content-center flex-wrap-direction-column">
       <div class="card" style="width: 15.5rem; height: 34rem; margin: 30px;">
         <img src="./imagenes/Hamburguesa.JPG" class="card-img-top" style="width: auto; height: 320px;" alt="Hamburguesas">
         <div class="card-body">
